Fix page wrap to place below fixed header.

--- a/styles.css
+++ b/styles.css
@@ -50,6 +50,7 @@ body {
 
 .page-wrap {
   display: flex;
+  margin-top: 3em;
   width: 100%;
   max-width: 990px; }
 
@@ -61,16 +62,21 @@ body {
     .advertisement-wrapper {
       display: none; } }
 
-.article-wrapper {
+.main-content-wrapper {
   display: flex;
   flex: 3;
   flex-wrap: wrap;
   align-content: flex-start;
-  height: 800px;
   background-color: green; }
   @media (max-width: 989px) {
-    .article-wrapper {
+    .main-content-wrapper {
       flex: 1; } }
+
+.blog-title {
+  background-color: yellow;
+  min-width: 100%;
+  height: 2.5em;
+  margin: 1em; }
 
 .article-3-col {
   background-color: blue;
@@ -92,8 +98,7 @@ body {
 
 footer {
   background-color: lightcoral;
-  width: 100%;
-  max-width: 990px;
+  min-width: 100%;
   position: fixed;
   bottom: 0;
   height: 3em; }
