--- a/styles.css.scss
+++ b/styles.css.scss
@@ -24,6 +24,7 @@ body {
 
 .page-wrap {
   display: flex;
+  margin-top: 3em;
   width: 100%;
   max-width: 990px;
 }
@@ -38,17 +39,23 @@ body {
   }
 }
 
-.article-wrapper {
+.main-content-wrapper {
   display: flex;
   flex: 3;
   flex-wrap: wrap;
   align-content: flex-start;
-  height: 800px;
   background-color: green;
 
   @media (max-width: 989px) {
     flex: 1;
   }
+}
+
+.blog-title {
+  background-color: yellow;
+  min-width: 100%;
+  height: 2.5em;
+  margin: 1em;
 }
 
 .article-3-col {
@@ -75,8 +82,7 @@ body {
 
 footer {
   background-color: lightcoral;
-  width: 100%;
-  max-width: 990px;
+  min-width: 100%;
   position: fixed;
   bottom: 0;
   height: 3em;
